fixed floating footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
   <!-- Navbar fixed-top on scroll-->
+  <section class="main-content">
   <section id="nav">
     <div class="fixed-top bg-white border-bottom">
       <div class="d-flex flex-wrap align-items-center text-align-center justify-content-lg-start">
@@ -103,9 +104,7 @@
     </div>
 
   </section>
-  <!-- Testimonial -->
-  
-  <!-- Pricing -->
+</section>
  
   <!-- Footer -->
   <section class="d-flex footer gradient-background mt-5 ">
