--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="pt-1">
         <div class="row row-cols-md-3 row-cols-2">
           <div class="col ">
-            <footer style="font-size:0.7rem">Stefano ©</footer>
+            <footer style="font-size:0.7rem">Stefano & Davide ©</footer>
           </div>
           <div class="col"></div>
           <div class="col text-end">
