--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
           <img class="img-fluid" src="./images/AV new icon.jpg">
         </div>
 
-        
-       
-
-
-
       </div>
     </div>
   </section>
@@ -37,9 +32,9 @@
     <div class="gradient-background">
       <div class="container">
         <div class="row main-title justify-content-center align-items-center">
-          <div class="col-6">
+          <div class="col-10 col-sm-8 col-lg-6">
             <div class="title-text text-center">
-              <h2>What are you looking for?</h2>
+              <h2 class="Titolo">What are you looking for?</h2>
             </div>
             <div class="input-group mb-3 mt-3">
               <div class="input-group-prepend">
